
Note: over its 35+ year history, cdecl has never had good version numbering.
For changes in a particular version where the version number is unknown, the
version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 18.7

** `__STDC_` macros
Defining a macro with a name beginning with `__STDC_` now results in a warning
that such names are reserved.


* Changes in Cdecl 18.6

** Better "did you mean" suggestions
"Did you mean" suggestions now include all that are "similar enough," not only
those that have the same Damerau-Levenshtein distance as the best suggestion.

** `--no-typedefs`, `-t` option, twice
Specifying the `-t` option twice now suppresses predefining _all_ types, even
those normally required.  (This is a debugging aid for developers of `cdecl`
itself.  Certain results willl be incorrect.)

** East-const `_Atomic`
When in east-`const` mode, `_Atomic` is now also printed east.

** `_Atomic void` parameters
Such parameters are now also correctly flagged as illegal.

** Color prompts
Initial color prompts have been fixed.

** Multiline comments
Multiline C-style comments `/* */` are now supported (mostly).


* Changes in Cdecl 18.5.1

** Added missing `all`
The help for the `show` command now includes the missing optional `all`
keyword.


* Changes in Cdecl 18.5

** `[[indeterminate]]`
Added support for C++26 `indeterminate` attribute.

** C++26 types
Added the predefined types `std::hazard_pointer`, `std::hive_limits`,
`std::rcu_domain`, `std::text_encoding`, `std::contracts::assertion_kind`,
`std::contracts::contract_violation`, `std::contracts::detection_mode`,
`std::contracts::evaluation_semantic`, `std::linalg::column_major_t`,
`std::linalg::explicit_diagonal_t`, `std::linalg::implicit_unit_diagonal_t`,
`std::linalg::lower_triangle_t`, `std::linalg::row_major_t`, and